@@ -69,6 +69,7 @@ Version 7.44 - not yet released
   - Improve audio support: prevent ducking and enable sound playback even when the phone is muted
 * devices
   - Add driver for Condor 3
+  - Add driver for LöFGREN variometer
   - Add driver for LX Navigation Eos / Era variometers
   - Add driver for Stratux
   - Flarm: parse flarm error messages (PFLAE) and display them
